--- a/StackedBars.csproj
+++ b/StackedBars.csproj
@@ -106,6 +106,11 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
       <Content Include="LICENSE.txt" />
+      <Content Include="Thunderstore\config\azumatt.StackedBars.cfg" />
+      <Content Include="Thunderstore\icon.png" />
+      <Content Include="Thunderstore\icon.psd" />
+      <Content Include="Thunderstore\manifest.json" />
+      <Content Include="Thunderstore\README.md" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets" Condition="Exists('packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets')" />
