--- a/StackedBars.csproj
+++ b/StackedBars.csproj
@@ -106,7 +106,7 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
       <Content Include="LICENSE.txt" />
-      <Content Include="Thunderstore\config\azumatt.StackedBars.cfg" />
+      <Content Include="Thunderstore\config\Azumatt.StackedBars.cfg" />
       <Content Include="Thunderstore\icon.png" />
       <Content Include="Thunderstore\icon.psd" />
       <Content Include="Thunderstore\manifest.json" />
