--- a/StackedBars.csproj
+++ b/StackedBars.csproj
@@ -119,6 +119,7 @@
         <None Include="packages.config"/>
     </ItemGroup>
     <ItemGroup>
+        <Content Include=".github\workflows\publish-mod.yml" />
         <Content Include=".gitignore"/>
         <Content Include="environment.props"/>
         <Content Include="ILRepack.targets"/>
