--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.18.2" targetFramework="net48" />
+  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.40" targetFramework="net48" developmentDependency="true" />
 </packages>
